# compscripts

./: Cargo.toml  Makefile  README.md
bkmk/: Cargo.toml
bkmk/src/: bookmark.rs  cli.rs  main.rs  manager.rs
itmn/: Cargo.toml
itmn/src/: cli.rs  item.rs  main.rs  manager.rs  report.rs
mass-rename/: Cargo.toml
mass-rename/src/: cli.rs  main.rs
src/: Makefile  bkmk.rs  lib.rs  tkmn.rs
src/bkmk/: bookmark.rs  cli.rs  main.rs  manager.rs
src/core/: aliases.rs  array_serialization.rs  cowstr.rs  data.rs  error.rs  misc.rs  mod.rs  tmp.rs
src/itmn/: cli.rs  item.rs  main.rs  manager.rs  report.rs  tmp.rs
src/lib/: array_serialization.rs  cli_tools.rs  functions.rs  io.rs  misc.rs  mod.rs  traits.rs
src/tkmn/: main.rs
tools/: compscripts-defaultedit
utils/: Cargo.toml
utils/src/: cowstr.rs  data.rs  error.rs  io.rs  lib.rs  misc.rs  tmp.rs
