[package]
name = "rust-scripts"
version = "0.1.0"
authors = ["YohananDiamond <mitonanan12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.1"
select = "0.5.0"
# reqwest = "0.10.6"
# tokio = { version = "0.2.21", features = ["macros"] }
curl = "0.4.30"

[[bin]]
name = "bkmk"
path = "src/bkmk.rs"
