[package]
name = "rust-scripts"
version = "0.1.0"
authors = ["YohananDiamond <mitonanan12@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.1"
select = "0.5.0"
curl = "0.4.30"

[profile.release]
opt-level = "s"
lto = true

[[bin]]
name = "bkmk"
path = "src/bkmk.rs"
