[package]
name = "rust-scripts"
version = "0.1.0"
authors = ["YohananDiamond <mitonanan12@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.1"
select = "0.5.0"
curl = "0.4.30"
regex = "1.3.9"

[profile.release]
opt-level = "s"
lto = true

[[bin]]
name = "bkmk"
path = "src/bkmk/main.rs"

[[bin]]
name = "itmn"
path = "src/itmn/main.rs"

[lib]
name = "core"
path = "src/core/mod.rs"
