[package]
name = "bkmk"
version = "0.1.0"
authors = ["YohananDiamond <mitonanan12@gmail.com>"]
edition = "2018"

[dependencies]
utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.6", features = ["derive"] }
select = "0.5.0"
curl = "0.4.30"
regex = "1.3.9"
rand = "0.7.3"
chrono = "0.4"

[[bin]]
name = "bkmk"
path = "src/main.rs"
