[package]
name = "itmn"
version = "0.1.0"
authors = ["YohananDiamond <mitonanan12@gmail.com>"]
edition = "2018"

[dependencies]
utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.6", features = ["derive"] }

[[bin]]
name = "itmn"
path = "src/main.rs"
